# chamcert

./: Cargo.toml  README.md  csrs.sh  gen_and_check.sh
src/: args.rs  base.rs  check.rs  csr.rs  dcd.rs  delta_check.rs  keygen.rs  main.rs  pqc_oids.rs  request.rs  request_check.rs  utils.rs
tests/artifacts/: 6F49779533D565E8B7C1062503EAB41492C38E4D.fake.p12  GoodCACert.crt  GoodCACert.key  ValidCertificatePathTest1EE.crt  base.der  recon.der
tests/artifacts/pqc-certificates/1.2.840.10045.3.1.7/: 1.2.840.10045.3.1.7.cbor  base.der
tests/artifacts/pqc-certificates/1.2.840.10045.3.1.7/ca/: ca.der  ca.pem  ca_priv.der  ca_priv.pem
tests/artifacts/pqc-certificates/1.2.840.10045.3.1.7/crl/: crl_ca.crl  crl_ta.crl
tests/artifacts/pqc-certificates/1.2.840.10045.3.1.7/ee/: cert.der  cert.pem  cert_priv.der  cert_priv.pem
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.11.4.4/: 1.3.6.1.4.1.2.267.11.4.4.cbor  base.der
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.11.6.5/: 1.3.6.1.4.1.2.267.11.6.5.cbor  base.der
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.11.8.7/: 1.3.6.1.4.1.2.267.11.8.7.cbor  base.der
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.7.4.4/: 1.3.6.1.4.1.2.267.7.4.4.cbor  base.der
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.7.6.5/: 1.3.6.1.4.1.2.267.7.6.5.cbor  base.der
tests/artifacts/pqc-certificates/1.3.6.1.4.1.2.267.7.8.7/: 1.3.6.1.4.1.2.267.7.8.7.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.3.1/: 1.3.9999.3.1.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.3.4/: 1.3.9999.3.4.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.4.1/: 1.3.9999.6.4.1.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.4.10/: 1.3.9999.6.4.10.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.4.4/: 1.3.9999.6.4.4.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.4.7/: 1.3.9999.6.4.7.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.5.1/: 1.3.9999.6.5.1.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.5.3/: 1.3.9999.6.5.3.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.5.5/: 1.3.9999.6.5.5.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.5.7/: 1.3.9999.6.5.7.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.6.1/: 1.3.9999.6.6.1.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.6.3/: 1.3.9999.6.6.3.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.6.5/: 1.3.9999.6.6.5.cbor  base.der
tests/artifacts/pqc-certificates/1.3.9999.6.6.7/: 1.3.9999.6.6.7.cbor  base.der
(+284 files in other folders)
