[package]
name = "chamcert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-oid = { version = "0.9", features = ["db"] }
der = { version = "0.7.6", features = ["alloc", "derive", "oid", "pem"] }
spki = "0.7.2"
x509-cert = {version = "0.2.3", features = ["builder", "hazmat"]}
clap = {version = "4.3.4", features=["std", "derive"]}
pqcrypto-internals =  {version = "0.2.4", optional = true}
pqcrypto-dilithium =  {version = "0.4.6", optional = true}
pqcrypto-falcon = {version = "0.2.10", optional = true}
pqcrypto-sphincsplus = {version = "0.6.4", optional = true}
pqcrypto = {version = "0.16.1", optional = true}
pqcrypto-traits = {version = "0.3.4", optional = true}
subtle-encoding = {version = "0.5", default-features = false, features = ["hex", "alloc"]}
log = "0.4.17"
log4rs = {version = "1.2.0"}
pqckeys = { git = "https://github.com/carl-wallace/pqckeys" }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
sha-1 = {version = "0.10.0", default-features = false}
certval = { git = "https://github.com/carl-wallace/rust-pki", features = ["std", "pqc"]}
ecdsa = { version = "0.16.7", features = ["digest", "pem"] }
signature = { version = "2.1.0", features = ["rand_core", "digest", "alloc"] }
p256 = "0.13.0"

[features]
default = ["pqc"]
pqc = ["pqcrypto-dilithium", "pqcrypto-falcon", "pqcrypto-sphincsplus", "pqcrypto", "pqcrypto-traits"]
